# lk

./: README.md  README_CN.ini  README_cn.md.ini  cartographer_launch.py  doubao.py  voice_payment_node.py  voice_way.py  waypoint.py
ai_ros/: CMakeLists.txt  package.xml
ai_ros/config/: config.json
ai_ros/launch/: doubao.launch.py
ai_ros/src/ai_ros/: doubao.py
gps_ws/src/gps_pkg/: package.xml  setup.cfg  setup.py
gps_ws/src/gps_pkg/src/gps_pkg/: gps_driver.py
gps_ws/src/gps_pkg/src/gps_pkg/config/: gps_config.yaml
gps_ws/src/nmea_msgs/: CMakeLists.txt  package.xml
guide_robot/: package.xml  setup.py
guide_robot/config/: config.json
guide_robot/guide_robot/: object_detector.py  obstacle_detector.py  voice_announcer.py
guide_robot/launch/: guide_robot.launch.py
py_install/Speech_Lib/: Speech_Lib.py
py_install/Speech_Lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
voice_control/: package.xml  setup.py
voice_control/voice_control/: speech_recognition_node.py  voice_control_node.py
voice_payment/: package.xml  setup.cfg  setup.py
voice_payment/launch/: payment.launch.py
voice_payment/voice_payment/: voice_payment_node.py
