<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guide_robot</name>
  <version>0.0.0</version>
  <description>Guide robot for blind assistance</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>serial</depend>
  <depend>openai</depend>
  <depend>ament_index_python</depend>
  
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>turn_on_wheeltec_robot</exec_depend>
  
  <!-- 添加以下 export 部分解决构建问题 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>