<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_pkg</name>
  <version>0.0.0</version>
  <description>GPS driver and utilities package</description>
  <maintainer email="simon@example.com">simon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 核心 ROS 依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Python 依赖 -->
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <!-- 构建时依赖 -->
  <build_depend>python3-pyproj</build_depend>
  <build_depend>python3-serial</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>